# third

./: .gitignore  pyproject.toml
tests/: conftest.py  test_console.py  test_wikipedia.py
third/: console.py  wikipedia.py
